--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,6 +4,11 @@
     <string name="crime_title_label">Title</string>
     <string name="crime_details_label">Details</string>
     <string name="crime_solved_label">Solved!</string>
+
+    <string name="crime_photo_button_description">Take a photo of a crime scene</string>
+    <string name="crime_photo_no_image_description">Crime scene photo (not set)</string>
+    <string name="crime_photo_image_description">Crime scene photo (set)</string>
+
     <string name="button_first">First</string>
     <string name="button_last">Last</string>
     <string name="date_picker_title">Date of crime:</string>
